# Python_AWSCLI

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
EC2/: commands.py
ECS/: ServiceRestart.py  commands.py
RDS/: ChangeEngineType.py  ChangeType.py  commands.py
